--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -46,6 +46,8 @@ jobs:
           python3 -m pytest --cov=GeneticInheritanceGraph --cov-report=xml --cov-branch -n 0 tests
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       - name: Delete coverage
         run: |
             rm .coverage
