Get docs compiling

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,7 +1,6 @@
-# Need to set PYTHONPATH so that we pick up the local tsdate
 PYPATH=$(shell pwd)/../
 GIGL_VERSION:=$(shell PYTHONPATH=${PYPATH} \
-   python3 -c 'import GeneticInheritanceGraphLibrary as gigl; print(gigl.__version__.split("+")[0])')
+   python -c 'import GeneticInheritanceGraphLibrary as gigl; print(gigl.__version__.split("+")[0])')
 
 BUILDDIR      = _build
 
