--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -52,9 +52,11 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
+          name: github-pages
           path: docs/_build/html
   
   deploy-docs:
+    name: Deploy docs when merged to main
     needs: build-docs
     if: github.ref == 'refs/heads/main'
     permissions:
@@ -69,4 +71,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v4
